CICD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #ingress name
  namespace: # namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: #DNS name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: #name service
            port:
              number: # service port
